# dcat-ap-it-generator

./: .gitignore  LICENSE  LOG.md  README.md  config-messina.yml  config-sicilia.yml  config.example.yml  pyproject.toml
dcat_ap_it_generator/: ckan_client.py  cli.py  licenses.yml  mapper.py  namespaces.py
docs/: plan.md  release.md  rules.md  spec.md
docs/specs/: DCAT-AP_IT.owl
examples/: config-matera.yml  config-messina.yml  config-milano.yml  config-olbia.yml
tests/: test_ckan_client.py  test_cli.py  test_mapper.py
tests/fixtures/: dataset_minimal.json  dataset_trentino.json
