[project]
name = "dcat-ap-it-generator"
version = "0.1.5"
description = "Genera cataloghi RDF DCAT-AP IT da qualsiasi portale CKAN, senza plugin"
readme = "README.md"
authors = [
    { name = "Andrea Borruso", email = "aborruso@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.13"
keywords = ["dcat-ap-it", "ckan", "rdf", "open-data", "linked-data", "metadata", "harvesting", "turtle", "sparql", "italy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyfiglet>=1.0.4",
    "pyyaml>=6.0.3",
    "questionary>=2.1.1",
    "rdflib>=7.6.0",
    "requests>=2.33.1",
    "rich>=14.3.3",
    "typer[all]>=0.24.1",
]

[project.scripts]
dcat-ap-it = "dcat_ap_it_generator.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
